--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "ifsym.doc.tar.xz": 369f85ded8e148e202fbc80578c865bdbfbb0b87
-  "ifsym.tar.xz": a0dff06666b7d891824c033a3655e54bcb639d4a
+  ifsym.doc.tar.xz: 5b83a40a77c119e29709efa2092976d6648af8ad
+  ifsym.tar.xz: d24e752d2f4008e006fef4a8150b200cdb664771
