--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-   ifsym.doc.tar.xz: 2948b03109cab57ce9e89b2722ea68f2bbab2de4
-   ifsym.tar.xz: f53cb62cbcfec4e95141dd2b2e0b612b3b40b14b
+  ifsym.doc.r24868.tar.xz: 2948b03109cab57ce9e89b2722ea68f2bbab2de4
+  ifsym.r24868.tar.xz: f53cb62cbcfec4e95141dd2b2e0b612b3b40b14b
